--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -28,7 +28,7 @@
     <a href="javascript:void(0);" class="btn-burger">
       <span>Menu</span>
     </a>
-    <a href="javascript:void(0);" data-toggle="#search-box" class="icon-search">
+    <a href="javascript:void(0);" data-show="#search-box" class="icon-search">
       <span>Search</span>
     </a>
     <ul class="main-menu clearfix">
@@ -73,20 +73,20 @@
           <span>All Property Types</span>
           <ul>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="tnc" name="tnc" checked="checked">
-              <label for="tnc">Apartment</label>
+              <input type="checkbox" id="f_tnc" name="f_tnc" checked="checked">
+              <label for="f_tnc">Apartment</label>
             </li>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="tnc1" name="tnc1" checked="checked">
-              <label for="tnc1">Service Apartment</label>
+              <input type="checkbox" id="f_tnc1" name="f_tnc1" checked="checked">
+              <label for="f_tnc1">Service Apartment</label>
             </li>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="tnc3" name="tnc3" checked="checked">
-              <label for="tnc3">Town house</label>
+              <input type="checkbox" id="f_tnc3" name="f_tnc3" checked="checked">
+              <label for="f_tnc3">Town house</label>
             </li>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="tnc4" name="tnc4" checked="checked">
-              <label for="tnc4">Other</label>
+              <input type="checkbox" id="f_tnc4" name="f_tnc4" checked="checked">
+              <label for="f_tnc4">Other</label>
             </li>
           </ul>
         </div>
@@ -100,20 +100,20 @@
           <span>Require amenities</span> 
           <ul>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="require" name="require" checked="checked">
-              <label for="require">Apartment</label>
+              <input type="checkbox" id="f_require" name="f_require" checked="checked">
+              <label for="f_require">Apartment</label>
             </li>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="require1" name="require1" checked="checked">
-              <label for="require1">Service Apartment</label>
+              <input type="checkbox" id="f_require1" name="f_require1" checked="checked">
+              <label for="f_require1">Service Apartment</label>
             </li>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="require3" name="require3" checked="checked">
-              <label for="require3">Town house</label>
+              <input type="checkbox" id="f_require3" name="f_require3" checked="checked">
+              <label for="f_require3">Town house</label>
             </li>
             <li class="checkbox-wrapper">
-              <input type="checkbox" id="require4" name="require4" checked="checked">
-              <label for="require4">Other</label>
+              <input type="checkbox" id="f_require4" name="f_require4" checked="checked">
+              <label for="f_require4">Other</label>
             </li>
           </ul>
         </div>
@@ -201,7 +201,7 @@
         </div>
       </div>
     </div>
-    <a href="javascript:void(0)" data-toggle="#search__morefilter" class="link-arrow show-for-small">Show more</a>
+    <a href="javascript:void(0)" data-show="#search__morefilter" class="link-arrow show-for-small">Show more</a>
 
     <div class="clearfix"></div>
 
@@ -250,74 +250,74 @@
       <ul class="list-check">
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="tv" name="tv">
-            <label for="tv">TV</label>
+            <input type="checkbox" id="h_tv" name="h_tv">
+            <label for="h_tv">TV</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="microwave" name="microwave">
-            <label for="microwave">Microwave</label>
+            <input type="checkbox" id="h_microwave" name="h_microwave">
+            <label for="h_microwave">Microwave</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="aircondition" name="aircondition">
-            <label for="aircondition">Air contitioner</label>
+            <input type="checkbox" id="h_aircondition" name="h_aircondition">
+            <label for="h_aircondition">Air contitioner</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="chimney" name="chimney">
-            <label for="chimney">Electric chimney</label>
+            <input type="checkbox" id="h_chimney" name="h_chimney">
+            <label for="h_chimney">Electric chimney</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="smock-detector" name="smock-detector">
-            <label for="smock-detector">Smoke detector</label>
+            <input type="checkbox" id="h_smock-detector" name="h_smock-detector">
+            <label for="h_smock-detector">Smoke detector</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="fire-extinguisher" name="fire-extinguisher">
-            <label for="fire-extinguisher">Fire extinguisher</label>
+            <input type="checkbox" id="h_fire-extinguisher" name="h_fire-extinguisher">
+            <label for="h_fire-extinguisher">Fire extinguisher</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="balcony" name="balcony">
-            <label for="balcony">Balcony</label>
+            <input type="checkbox" id="h_balcony" name="h_balcony">
+            <label for="h_balcony">Balcony</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="first-aid-kit" name="first-aid-kit">
-            <label for="first-aid-kit">First Aid Kit</label>
+            <input type="checkbox" id="h_first-aid-kit" name="h_first-aid-kit">
+            <label for="h_first-aid-kit">First Aid Kit</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="bathtub" name="bathtub">
-            <label for="bathtub">Bathtub</label>
+            <input type="checkbox" id="h_bathtub" name="h_bathtub">
+            <label for="h_bathtub">Bathtub</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="geyser" name="geyser">
-            <label for="geyser">Geyser</label>
+            <input type="checkbox" id="h_geyser" name="h_geyser">
+            <label for="h_geyser">Geyser</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="essentails" name="essentails">
-            <label for="essentails">Essentails</label>
+            <input type="checkbox" id="h_essentails" name="h_essentails">
+            <label for="h_essentails">Essentails</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="dish-washer" name="dish-washer">
-            <label for="dish-washer">Dish washer</label>
+            <input type="checkbox" id="h_dish-washer" name="h_dish-washer">
+            <label for="h_dish-washer">Dish washer</label>
           </div>
         </li>
       </ul>
@@ -328,74 +328,74 @@
 
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="e-backup" name="e-backup">
-            <label for="e-backup">24Hr Electricity Backup</label>
+            <input type="checkbox" id="h_ebackup" name="ebackup">
+            <label for="h_ebackup">24Hr Electricity Backup</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="parking" name="parking">
-            <label for="parking">Parking</label>
+            <input type="checkbox" id="h_parking" nh_ame="parking">
+            <label for="h_parking">Parking</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="community-hall" name="community-hall">
-            <label for="community-hall">Community Hall</label>
+            <input type="checkbox" id="h_community-hall" name="h_community-hall">
+            <label for="h_community-hall">Community Hall</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="club" name="club">
-            <label for="club">Club House</label>
+            <input type="checkbox" id="h_club" nh_ame="club">
+            <label for="h_club">Club House</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="restaurant" name="restaurant">
-            <label for="restaurant">Restaurant</label>
+            <input type="checkbox" id="h_restaurant" name="h_restaurant">
+            <label for="h_restaurant">Restaurant</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="coffee-shop" name="coffee-shop">
-            <label for="coffee-shop">Coffee-shop</label>
+            <input type="checkbox" id="h_coffee-shop" name="h_coffee-shop">
+            <label for="h_coffee-shop">Coffee-shop</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="banking-atm" name="banking-atm">
-            <label for="banking-atm">Banking/ ATM</label>
+            <input type="checkbox" id="h_banking-atm" name="h_banking-atm">
+            <label for="h_banking-atm">Banking/ ATM</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="phamacy" name="phamacy">
-            <label for="phamacy">Phamacy</label>
+            <input type="checkbox" id="h_phamacy" nh_ame="phamacy">
+            <label for="h_phamacy">Phamacy</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="shopping-mall" name="shopping-mall">
-            <label for="shopping-mall">Shopping mall</label>
+            <input type="checkbox" id="h_shopping-mall" name="h_shopping-mall">
+            <label for="h_shopping-mall">Shopping mall</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="supermarket" name="supermarket">
-            <label for="supermarket">Supermarket</label>
+            <input type="checkbox" id="h_supermarket" name="h_supermarket">
+            <label for="h_supermarket">Supermarket</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="swimming-pool" name="swimming-pool">
-            <label for="swimming-pool">Swimming Pool</label>
+            <input type="checkbox" id="h_swimming-pool" name="h_swimming-pool">
+            <label for="h_swimming-pool">Swimming Pool</label>
           </div>
         </li>
         <li>
           <div class="checkbox-wrapper check-switch">
-            <input type="checkbox" id="gymnasiums" name="gymnasiums">
-            <label for="gymnasiums">Gymnasiums</label>
+            <input type="checkbox" id="h_gymnasiums" name="h_gymnasiums">
+            <label for="h_gymnasiums">Gymnasiums</label>
           </div>
         </li>
       </ul>
