--- a/app/assets/css/blocks/_footer.scss
+++ b/app/assets/css/blocks/_footer.scss
@@ -2,11 +2,11 @@ footer {
   @include screen(medium){
     padding-top: 15px;
     border-top: 1px solid $color-light;
-    background: url( ../../assets/images/global/footer-background.png) no-repeat;
+    background: url( ../images/global/footer-background.png) no-repeat;
     background-size: cover;
     box-shadow: 0 0 20px #aaa;
   }
-  
+
   .block-title {
     margin: 20px 0;
   }
@@ -19,11 +19,11 @@ footer {
 }
 
 .copyright {
-  @include screen(medium,false){
-    p{
-      margin: 0;
-      padding: 10px 0;
-      border-top: 1px solid $color-light;
+  p{
+    margin: 0;
+    padding: 10px 0;
+    border-top: 1px solid $color-light;
+    @include screen(medium){
     }
   }
 }
@@ -33,7 +33,7 @@ footer {
   .slider-wrapper {
     padding:  0 40px;
     &:hover {
-        
+
       @include screen(medium){
         .slick-arrow{
           background: rgba(0, 0, 0, 0.3);
@@ -64,9 +64,10 @@ footer {
   text-transform: capitalize;
 }
 .social {
-  @include screen(medium,false){
-    text-align: center;
-    margin-bottom: 0;
+  text-align: center;
+  margin-bottom: 0;
+  @include screen(medium){
+    text-align: left;
   }
 }
 .social-media {
@@ -82,27 +83,28 @@ footer {
 
 .social-link {
   @include screen(medium) {
-   padding: 10px !important;
- }
+    padding: 10px !important;
+  }
 
- .col-5 {
-   @include screen(medium, false) {
+  .col-5 {
     float: left;
     width: 49%;
+    @include screen(medium) {
+    }
   }
-}
-.left {
- @include screen(medium, false) {
-  text-align: center;
-}
-}
+  .left {
+    text-align: center;
+    @include screen(medium) {
+      text-align: left;
+    }
+  }
 
-.txt {
-  color: #656565;
-  font-size: .75em;
-  display: inline-block;
-  vertical-align: middle;
-}
+  .txt {
+    color: #656565;
+    font-size: .75em;
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
 
 .icon-fb-btn,.icon-youtube,.icon-chat {
@@ -110,7 +112,7 @@ footer {
 }
 
 .footer-link {
-	padding: 0 10px;
+  padding: 0 10px;
 }
 
 .btn-to-top {
@@ -126,12 +128,12 @@ footer {
   z-index: 999;
 
   i {
-   font-size: 2.5em;
-   color: #f7ab03;
-   min-height: 35px;
-   text-align: center;
-   display: block;
- }
+    font-size: 2.5em;
+    color: #f7ab03;
+    min-height: 35px;
+    text-align: center;
+    display: block;
+  }
 }
 
 .fa-chevron-circle-up{
@@ -178,28 +180,14 @@ footer {
   margin-top: 1em;
 
   @include screen(medium){
-   text-align: right;
-   float: none;
-   width: 77%;
- }  
+    text-align: right;
+    float: none;
+    width: 77%;
+  }  
 
- a {
-  color: #009d30;
-  padding: 0 3px;    
-  white-space: nowrap;
-}
-}
-
-.nestle-logo {
-  height: 53px;
-  background: url(../images/global/nestle-logo.jpg) left top no-repeat;
-  background-size: 100%;
-  display: inline-block;
-  vertical-align: bottom;
-  width: 21%;
-  max-width: 126px;
-  @include screen(medium, false) {
-    margin-top: 1em;
-    float: left;
+  a {
+    color: #009d30;
+    padding: 0 3px;    
+    white-space: nowrap;
   }
 }
