--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -1,100 +1,47 @@
+{% set data = htmlWebpackPlugin.options %}
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1,user-scalable=no">
-  <title>{{ title }}</title>
-<!-- 
-  <link rel="icon" type="image/png" href="{{assetPath}}/images/favicons/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="{{assetPath}}/images/favicons/favicon-16x16.png" sizes="16x16" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{ data.title }}</title>
 
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=vietnamese" rel="stylesheet"> -->
+<!--   <link rel="icon" type="image/png" href="{{data.assetPath}}/images/favicons/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="{{data.assetPath}}/images/favicons/favicon-16x16.png" sizes="16x16" /> -->
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,500,600,700|Open+Sans" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+  <link rel="stylesheet" href="assets/js/libs/jplist.core.min.css">
 
 
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=vietnamese" as="style" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin,vietnamese"/></noscript>
-
-
-  <!-- build:css {{assetPath}}/css/vendor.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
-  <link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
-  <link rel="stylesheet" href="/bower_components/bootstrap-table/src/bootstrap-table.css" />
-  <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
-  <link rel="stylesheet" href="/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
-  <link rel="stylesheet" href="/bower_components/jplist/dist/css/jplist.core.min.css" />
-  <link rel="stylesheet" href="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
-  <!-- endbower -->
-  <!-- endbuild -->
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
-  
-  <!-- <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
-   -->
-  <!-- build:css {{assetPath}}/css/app.css -->
-  <link rel="stylesheet" href="{{assetPath}}/css/app.css">
-  <!-- endbuild -->
 
 </head>
 
 <body data-module="Form">
-  <script>
-  window.isIE = false;
-    // detect IE >= 10
-    if((navigator.userAgent.indexOf("MSIE") != -1 ) || (!!document.documentMode == true )) {
-      window.isIE = true;
-    }
-    window.accessToken = "ce088026e1e29bbe6d48d3bfc719ec89";
-    window.errorNotify = '';
-    window.errorBrowse = '';
 
-    </script>
-    <!-- HEADER -->
-    {% include 'header.twig' %}
-    <!-------------------->
+  <!-- HEADER -->
+  {% include './header.twig' %}
+  <!-------------------->
 
-    <!-- MAIN CONTENT -->
-    {% block page %}
-    {% endblock %}
-    <!-------------------->
+  <!-- MAIN CONTENT -->
+  {% block page %}{% endblock %}
+  <!-------------------->
 
-    <!-- FOOTER -->
-    {% include 'footer.twig' %}
-    <!-------------------->
+  <!-- FOOTER -->
+  {% include './footer.twig' %}
+   <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <!----<script src="assets/js/libs/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/libs/jquery-ui.min.js"></script>
+  <script src="assets/js/libs/jplist.sort-bundle.min.js"></script>
+  <script src="assets/js/libs/jplist.pagination-bundle.min.js"></script>
+  <script src="assets/js/libs/jplist.textbox-filter.min.js"></script>
+  <script src="assets/js/libs/jplist.jquery-ui-bundle.min.js"></script>
+  <!-------------------->
 
-
-
-    <!-- build:js {{assetPath}}/js/vendor.js -->
-    <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
-    <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
-    <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
-    <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
-    <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
-    <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
-    <script src="/bower_components/slick-carousel/slick/slick.js"></script>
-    <script src="/bower_components/bootstrap-table/src/bootstrap-table.js"></script>
-    <script src="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
-    <script src="/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.core.min.js"></script>
-    <script src="/bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
-    <script src="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-    
-    <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script>
-    
-    {# 
-    <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script> #}
-
-    <script src="{{assetPath}}/js/app.js"></script>
-
-  </body>
-  </html>
+</body>
+</html>
