--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -1,5 +1,6 @@
 .modal {
   background: rgba(0, 0, 0, 0.6);
+  padding-right: 0 !important;
 }
 
 .close-modal {
@@ -7,9 +8,6 @@
   color: $gray-medium; 
   font-size: 28px;
   z-index: 10;
-  @include screen(medium){
-    top: -40px;
-  }
   i {
     margin: 0;
   }
@@ -20,7 +18,11 @@
 }
 
 .modal-dialog {
-  margin: 6% auto 0;
+  margin: 15% auto 0;
+  width: auto;
+  @include screen(medium){
+    margin: 6% auto 0;
+  }
 }
 
 .modal-dialog {
@@ -39,7 +41,10 @@
     top: -220%;
     z-index: 10;
     right: 0;
-    @include screen(medium){
+    @include screen(small){
+      top: -230%;
+    }
+    @include screen(large){
       top: -350%;
     }
   }
@@ -48,11 +53,14 @@
   }
   h3 {
     text-transform: none;
+    font-size: 28px;
+    line-height: 34px;
   }
 }
 
 .modal-content {
   background: none;
+  box-shadow: none;
   padding: 0 10px;
   .thumb-service {
     color: #fff;
@@ -163,5 +171,11 @@
       padding-right: 130px;
       font-size: 22px;
     }
+  }
+}
+
+.modal-inspectation {
+  .close-modal {
+    top: -40px;
   }
 }
