--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -1,15 +1,18 @@
 .section-hero-banner {
-	padding:0;
-	padding-bottom:45%;
-	height:0;
-	overflow:hidden;
 
-	@include screen(medium,false){
-		height:auto;
-		background: url(../images/dummy/home.png) no-repeat;
-		background-size: cover;
-		padding: 20px;
-		padding-bottom:10%;
+	height:auto;
+	background: url(../images/dummy/home.png) no-repeat;
+	background-size: cover;
+	padding: 20px;
+	padding-bottom:10%;
+	@include screen(medium){
+		padding:0;
+		padding-bottom:54%;
+		height:0;
+		overflow:hidden;
+	}
+	@include screen(large){
+		padding-bottom:46%;
 	}
 
 }
@@ -17,8 +20,10 @@
 .slide-bg {
 	background: #656565;
 	font-size: 0;
-	@include screen(medium, false){
-		display:none;
+	display:none;
+
+	@include screen(medium){
+		display: block;
 	}
 	img {
 		width: 100%;
@@ -52,8 +57,11 @@
 .banner-wrapper {
 	@include screen(medium) {
 		width: 850px;
-		@include absolute( top 50% left 50%);
+		@include absolute( top 40% left 50%);
 		transform:translate(-50%, -50%);
+	}
+	@include screen(large) {
+		top: 50%;
 	}
 
 
@@ -89,11 +97,6 @@
 
 }
 
-[class^='col-'] {
-	@include screen(medium, false){
-		padding: 0 10px;
-	}
-}
 
 .link-district{
 	li {
@@ -180,8 +183,9 @@
 		@include absolute(top 30% right -3%);
 		transform:translateY(-50%);
 		font-size: 42px;
-		@include screen(medium, false){
-			display: none;
+		display: none;
+		@include screen(medium){
+			display: block;
 		}
 	}
 
@@ -250,9 +254,11 @@
 	}
 	.slick-dots {
 		button {
-			@include screen(medium, false){
-				width: 5px; 
-				height: 5px;
+			width: 5px; 
+			height: 5px;
+			@include screen(medium){
+				width: 10px; 
+				height: 10px;
 			}
 		}
 	}
@@ -363,11 +369,6 @@
 
 	.slick-dot {
 		button {
-
-			@include screen(medium, false){
-				width: 6px;
-				height: 6px;
-			}
 		}
 	}
 }
@@ -439,16 +440,19 @@
 	}
 }
 .properties__tab {
-	margin: 20px 0;
-	border:none;
-	@include screen(medium, false){
-		border-radius: 3px;
-		position: relative;
-		height: 30px;
-		max-width: 200px;
-		margin: 0 auto;
-		padding: 5px 10px;
-		border:1px solid $gray-medium;
+	border-radius: 3px;
+	position: relative;
+	height: 30px;
+	max-width: 200px;
+	margin: 0 auto;
+	padding: 5px 10px;
+	border:1px solid $gray-medium;
+	@include screen(medium){
+		max-width: none;
+		height: auto;
+		padding: 0;
+		margin: 20px 0;
+		border:none;
 	}
 
 
@@ -470,6 +474,7 @@
 		height: none;
 		overflow: auto;
 		z-index: 3;
+		border: none;
 		background: #fff;
 		width: 100%;
 		text-align: left;
@@ -486,10 +491,10 @@
 		}
 	}
 	li {
-		display: inline-block;
+		display: block;
 		vertical-align: top;
-		@include screen(medium, false){
-			display: block;
+		@include screen(medium){
+			display: inline-block;
 		}
 	}
 	a {
@@ -762,10 +767,11 @@
 
 
 #more-filter {
-	@include screen(medium,false){
-		display: none;;
-		&.show {
-			display: block;
-		}
+	display: none;
+	@include screen(medium){
+		display: block;
+	}
+	&.show {
+		display: block;
 	}
 }
