--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -78,7 +78,7 @@
 	</section>
 
 	<section class="quick-link hide-for-small">
-		<div class="thumb-slide carousel slide container" data-module="LinkSlide">
+		<div class="thumb-slide carousel slide container" data-module="SlideLink">
 			<h2 class="block-title">Quick links</h2>
 
 			<div class=" slider-wrapper">
