--- a/app/index.twig
+++ b/app/index.twig
@@ -198,7 +198,7 @@
 		</div>
 	</section>
 
-	<section class="section-steps" data-module="StepSlide">
+	<section class="section-steps" data-module="SlideStep">
 		<div class="container text-center">
 			<h2 class="section-title ">Hasske-Free Renting</h2>
 			<div class="slider-wrapper">
