--- a/app/listing.twig
+++ b/app/listing.twig
@@ -21,7 +21,7 @@
         <div class="modal-content">
           <a href="#galleryDetail" data-toggle="modal" class="close-modal"><i class="fa fa-close"></i></a>
           <div class="modal-body row">
-            <div class="col-md-8 gallery__slide" data-module="GalleryHouse">
+            <div class="col-md-8 gallery__slide" data-module="PopupGalleryHouse">
               <ul class="slider gallery__for"></ul>
               <p class="text-left">Photo <span class="counter-slide">3/9</span>: <span class="room-name">Bath room</span><br /> Real photo taken by Hoozing</p>
               <ul class="slider gallery__nav hide-for-small"></ul>
