--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -274,7 +274,7 @@
   box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.5);
 
   background: #fff;
-  padding: 2px 10px;
+  padding: 10px;
   text-align: left;
   font-weight: bold;
   font-size: 18px;
@@ -289,7 +289,7 @@
     width: 300px;
     display: block;
     opacity: 1;
-    margin-top: 10px;
+    margin-top: 0;
     transition: all .5s ease;
   }
   .popup-wrapper {
@@ -346,6 +346,9 @@
         background-color: #fff;
       }
     }
+  }
+  .thumb-list {
+    width:300px;
   }
 }
 
