--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -472,146 +472,7 @@ section {
 	border-radius: 3px;
 }
 
-.jplist-pagesbox {
 
-	button {
-		background: none;
-		width: 30px;
-		height: 30px;
-		border:none;
-		border-radius: 50%;
-		color: $blue;
-		font-size: 12px;
-		font-weight: bold;
-		transition:0.3s ease-out;
-		text-shadow:none;
-		@include screen(medium) {
-			width: 40px;
-			height: 40px;
-			font-size: 16px;	
-		}
-
-		&:hover {
-			background: #fff;
-			opacity:0.8;
-		}
-	}
-	.jplist-current {
-		background: $blue;
-		color: #fff;
-		&:hover {
-			color: #fff;
-			background: $blue;
-		}
-
-	}
-}
-.jplist-pagingprev,.jplist-pagingnext {
-
-	button {
-		position: relative;
-		background: none;
-		width: 30px;
-		height: 30px;
-		font-size: 0;
-		border:2px solid $blue;
-		border-radius: 50%;
-		color: $blue;
-		@include screen(medium) {
-			width: 40px;
-			height: 40px;
-		}
-		&:before {
-			@include absolute(top 50% left 50%);
-			transform: translate(-50%,-50%);
-			color: $blue;
-			display: block;
-			font: normal normal normal 28px/1 FontAwesome;
-		}
-	}
-}
-.jplist-label, .jplist-range-slider, .jplist-date-picker-range {
-	display: inline-block;
-	float: none;
-}
-.text-filter-box {
-	display: inline-block;
-	vertical-align: middle;
-}
-.jplist-drop-down {
-	text-align: left;
-	background: #fff;
-	display: inline-block;
-	vertical-align: middle;
-	height: 30px;
-	float: none;
-	margin: 4px 10px;
-
-	.jplist-dd-panel {
-		height: 30px;
-		float: none;
-		line-height: 30px;
-		&:after {
-			content: '\f0d7';
-			position: absolute;
-			top: 6px;
-			right: 10px;
-			color: #999;
-			display: block;
-			font: normal normal normal 18px/1 FontAwesome;
-		}
-	}
-
-	ul {
-		@include absolute(top 30px left);
-	}
-}
-
-.jplist-pagination {
-	display: block;
-	text-align: center;
-
-	> *{ 
-		display: inline-block;
-    vertical-align: middle;
-    margin: 10px 5px 0;
-	}
-}
-
-.jplist-one-page {
-	display: none;
-}
-
-.jplist-panel {
-	width: 100%;
-
-	input[type="text"] {
-		height: 30px;
-	}
-	label {
-		float: none;
-	}
-}
-.jplist-first {
-	&:before {
-		content:'\f100';
-	}
-}
-.jplist-prev {
-	&:before {
-		content:'\f104';
-	}
-}
-.jplist-next {
-	&:before {
-		content:'\f105';
-	}
-}
-.jplist-last {
-	&:before {
-		content:'\f101';
-	}
-}
 .toggle-block {
 	display: none;
 }
@@ -626,5 +487,77 @@ section {
 	display: none;
 	&.active {
 		display: block;
+	}
+}
+
+.slick-dots {
+	list-style: none;
+	text-align: center;
+	@include absolute(bottom 10px left)
+	width: 100%;
+
+	li {
+		display: inline-block;
+		margin: 0 5px;
+		vertical-align: middle;
+		transform: scale(0.9);
+
+	}
+	button {
+		font-size: 0;
+		background: $color-light;
+		outline: none;
+		border: none;
+		padding:0;
+		border-radius: 50%;
+		width: 12px;
+		height: 12px;
+
+	}
+	.slick-active {
+		transform: scale(1);
+		button {
+			background: #fff;
+		}
+	}
+
+}
+
+.slick-arrow {
+	font-size: 0;
+	@include absolute(top 50% right);
+	width: 40px;
+	height: 40px;
+	background: none;
+	border: none;
+	transform: translateY(-50%);
+	outline: none;
+	
+	&:after {
+		content: "\f105";
+		outline: none;
+		display: block;
+		color: #fff;
+		font: normal normal normal 45px/1 FontAwesome;
+		color: darken(#fff, 20%);
+		@include absolute(top 46% left 52%);
+		transform: translate(-50%,-50%);
+	}
+	@include screen(medium){
+		&:hover{
+			background: rgba(0,0,0,0.3);
+			&:after {
+				color: #fff;
+			}
+		}
+	}
+}
+
+.slick-prev {
+	left: 0;
+	z-index: 1;
+	&:after {
+		left: 50%;
+		content: "\f104";
 	}
 }
