--- a/app/neighborhood-page.twig
+++ b/app/neighborhood-page.twig
@@ -3,7 +3,7 @@
 {% block page %}
 	<main class="site-main">
 
-		<section class="banner banner-project">
+		<section class="banner banner--china-town">
 			<div class="banner__info">
 				<div class="container">
 					<div class="score">
