--- a/app/assets/css/blocks/_summary.scss
+++ b/app/assets/css/blocks/_summary.scss
@@ -1,29 +1,33 @@
-.summary {
-  .container {
-    overflow:  visible;
+.summary__wrapper {
+  font-size: 0;
+  @include screen(medium){
+    margin:  0 -20px;
+    
   }
-
-  .summary__wrapper { 
-    font-size: 0;
-  }
-
   .item {
     display: inline-block;
     vertical-align: top;
     border: 1px solid $red;
     text-align: center;
     width: 46%;
-    margin:0 2%;
+    margin:10px 0;
+    @include screen(medium){
+      margin:20px;
+    }
   }
   .item__icon {
     margin: -30px 0 20px;
-    font-size: 28px;
+    font-size: 34px;
     background: $red;
-    padding: 20px;
+    width: 70px;
+    display: inline-block;
+    line-height: 65px;
+    height: 70px;
     border-radius: 50%;
 
     i {
       color: #fff;
+      margin: 0;
     } 
   }
   h3 {
