--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -358,7 +358,7 @@ window.errorBrowse = '';
           </div>
         </div>
 
-        <div class="jplist-panel search__list hide-for-small">
+        <div class="search__list hide-for-small">
 
           <span data-type="<b class='list-count'>{all} Listing </b>" data-control-type="pagination-info" data-control-name="paging" data-control-action="paging"><b class='list-count'>625 Listing </b></span>
 
@@ -374,18 +374,6 @@ window.errorBrowse = '';
             </div>
           </div>
 
-          <!-- Sort by
-          <div class="jplist-drop-down" data-control-type="sort-drop-down" data-control-name="sort" data-control-action="sort"> 
-            <ul>
-              <li><span data-path="default">Sort by</span></li>
-              <li><span data-path="h3" data-order="asc" data-type="text">Title A-Z</span></li>
-              <li><span data-path="h3" data-order="desc" data-type="text">Title Z-A</span></li>
-              <li><span data-path=".price-tag" data-order="asc" data-type="number">Price asc</span></li>
-              <li><span data-path=".price-tag" data-order="desc" data-type="number">Price desc</span></li>
-            </ul>
-          </div> -->
-
-
           <label>Layout</label> 
           <ul class="search__layout" data-module="SwitchTab">
             <li><a href="javascript:void(0);" class="active" data-toggle="tooltip" data-placement="top" data-layout="mapview"  title="Map"><i class="fa fa-map"></i></a></li>
@@ -394,27 +382,8 @@ window.errorBrowse = '';
             <li><a href="javascript:void(0);" data-toggle="tooltip" data-placement="top" data-layout="project"  title="Project"><i class="fa fa-bank"></i></a></li>
           </ul>
 
-          <!-- <div class="text-filter-box">
-            <input data-path="h3" type="text" value="" placeholder="Filter by Title" data-control-type="textbox" data-control-name="title-filter" data-control-action="filter" />
-          </div> -->
-
-          <!-- <div class="jplist-drop-down" data-control-type="items-per-page-drop-down" data-control-name="paging" data-control-action="paging" data-control-animate-to-top="true">
-            <ul>
-              <li><span data-number="4" data-default="true"> 4 per page </span></li>
-              <li><span data-number="5"> 5 per page </span></li>
-              <li><span data-number="6"> 6 per page </span></li>
-              <li><span data-number="7"> 7 per page </span></li>
-              <li><span data-number="8"> 8 per page </span></li>
-              <li><span data-number="all"> View All </span></li>
-            </ul>
-          </div> -->
         </div>
 
-        <div class="jplist-panel">
-          <div class="jplist-pagination" data-control-animate-to-top="true" data-control-type="pagination" data-control-name="paging" data-control-action="paging" data-control-storage="false"></div>
-        </div>
-
-        <div class="jplist-pagination"><div class="jplist-pagingprev jplist-hidden" data-type="pagingprev"><button type="button" class="jplist-first" data-number="0" data-type="first" data-active="true">«</button><button type="button" class="jplist-prev" data-type="prev" data-number="0">‹</button></div><div class="jplist-pagingmid" data-type="pagingmid"><div class="jplist-pagesbox" data-type="pagesbox"><button type="button" data-type="page" class="jplist-current" data-active="true" data-number="0">1</button> <button type="button" data-type="page" data-number="1">2</button> <button type="button" data-type="page" data-number="2">3</button> </div></div><div class="jplist-pagingnext" data-type="pagingnext"><button type="button" class="jplist-next" data-type="next" data-number="1">›</button><button type="button" class="jplist-last" data-type="last" data-number="2">»</button></div></div>
 
         <div class=" tab-content active" id="search-list">
           <div class="row list-box">
@@ -590,16 +559,6 @@ window.errorBrowse = '';
 
           </div>
 
-
-          <div class="jplist-pagination"><div class="jplist-pagingprev jplist-hidden" data-type="pagingprev"><button type="button" class="jplist-first" data-number="0" data-type="first" data-active="true">«</button><button type="button" class="jplist-prev" data-type="prev" data-number="0">‹</button></div><div class="jplist-pagingmid" data-type="pagingmid"><div class="jplist-pagesbox" data-type="pagesbox"><button type="button" data-type="page" class="jplist-current" data-active="true" data-number="0">1</button> <button type="button" data-type="page" data-number="1">2</button> <button type="button" data-type="page" data-number="2">3</button> </div></div><div class="jplist-pagingnext" data-type="pagingnext"><button type="button" class="jplist-next" data-type="next" data-number="1">›</button><button type="button" class="jplist-last" data-type="last" data-number="2">»</button></div></div>
-
-          <div class="jplist-panel">
-            <div class="jplist-pagination" data-control-animate-to-top="true" data-control-type="pagination" data-control-name="paging" data-control-action="paging" data-control-storage="false"></div>
-          </div>
-
-          <!-- <div class="box jplist-no-results text-shadow align-center">
-            <p>No results found</p>
-          </div> -->
           <div class="list-info">
             <h3>Vinhomes Đồng Khởi</h3>
             <p> Vinhomes Đồng Khởi được ví như Hòn Ngọc Viễn Đông giữa lòng Sài Gòn nằm trên những cung đường danh giá bậc nhất trung tâm thành phố, 3 mặt tiền đường Đồng Khởi – Lê Thánh Tôn và Lý Tự Trọng với tầm nhìn tuyệt đẹp bao quát toàn bộ trung tâm thành phố hướng ra sông Sài Gòn, Phố đi bộ Nguyễn Huệ, Nhà Thờ Đức Bà.</p>
@@ -611,9 +570,7 @@ window.errorBrowse = '';
             <li> <a href="#">District 7</a></li>
             <li>One Bedroom Service Apartment</li>
           </ul>
-
         </div>
-
 
         <div class="tab-content" id="search-project">
           <h3 class="project-title">Starhill</h3>
