--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -10,7 +10,7 @@
 <!--   <link rel="icon" type="image/png" href="{{data.assetPath}}/images/favicons/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="{{data.assetPath}}/images/favicons/favicon-16x16.png" sizes="16x16" /> -->
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,500,600,700|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=vietnamese" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
   <link rel="stylesheet" href="assets/js/libs/jplist.core.min.css">
