--- a/app/list-property.twig
+++ b/app/list-property.twig
@@ -1,385 +1,131 @@
 {% extends "./_templates/layout.twig" %}
 
 {% block page %}
-<main class="site-main">
+	<main class="site-main">
 
-	<section class="banner banner-project">
-		<div class="banner__info">
+		<section class="section-banner banner">
+			<figure>
+				<img src="assets/images/dummy/property_featured.png" />
+			</figure>
+		</section>
+
+		<section class="section-list-property">
 			<div class="container">
-				<div class="score">
-					<span class="number-circle">9.1</span><br />
-					5th in Ranking
-				</div>
-				<div class="project-info">
-					<h1>Starhill</h1>
-					<p>Project Status: Finished</p>
-					<p>Price Range: 1000-2000USD</p>
-				</div>
+				<h2 class="title-section">List Your Property</h2>
+				<form action="">
+					<p>It’s absolutely free to list your property with Hoozing. Please fill the following form and our
+						team will get in touch with you in the shortest time possible.
+					</p>
+					<h4>CONTACT INFORMATION *</h4>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Your Name" />
+					</div>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Email Address" />
+					</div>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Phone Number" />
+					</div>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Your Availability" />
+						<p>E.g. Available on weekdays after 3PM for house inspections</p>
+					</div>
+					<br />
+					<h4>APARTMENT OVERVIEW *</h4>
+					<div class="select-wrapper select-range">
+						<label>Apartment Project</label>
+						<ul>
+							<li class="active">0</li>
+							<li>$10000</li>
+							<li>$20000</li>
+							<li>$30000</li>
+							<li>$40000</li>
+						</ul>
+					</div>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Address" />
+					</div>
+					<div class="select-wrapper select-range">
+						<label>District</label>
+						<ul>
+							<li class="active">0</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+						</ul>
+					</div>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Price per month (USD)" />
+					</div>
+					<div class="input-wrapper">
+						<input type="text" placeholder="Bond" />
+					</div>
+					<div class="select-wrapper select-range">
+						<label>Furnishment</label>
+						<ul>
+							<li class="active">0</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+						</ul>
+					</div>
+					<div class="select-wrapper select-bed">
+						<span>Any bed</span>
+						<ul>
+							<li class="active">Bedroom</li>
+							<li>1+</li>
+							<li>2+</li>
+							<li>3+</li>
+							<li>4+</li>
+							<li>5+</li>
+							<li>6+</li>
+						</ul>
+					</div>
+					<div class="select-wrapper select-bath">
+						<span>Any bath</span>
+						<ul>
+							<li class="active">Bathrôm</li>
+							<li>1+</li>
+							<li>2+</li>
+							<li>3+</li>
+							<li>4+</li>
+							<li>5+</li>
+						</ul>
+					</div>
+
+					<br />
+					<h4>AMENITIES *</h4>
+
+					<br />
+					<h4>FACILITIES *</h4>
+
+					<br />
+					<h4>DESCRIPTION & POLICIES *</h4>
+					<div class="input-wrapper">
+						<textarea name="text" id="" cols="30" rows="10" placeholder="Apartment Description">
+						</textarea>
+					</div>
+					<p>E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
+					<div class="input-wrapper">
+						<textarea name="text" id="" cols="30" rows="10" placeholder="Apartment Policies">
+						</textarea>
+					</div>
+					<p>E.g. whether the building has been recently renovated, how far it is from city centre, the neighboorhood is suitable for young people or family…</p>
+					<br />
+					<h4>UPLOAD PHOTOS</h4>
+					<div class="wrap-input">
+						<input type="text">
+					</div>
+					<div class="button-wrapper">
+						<a href="#" class="button button--red" >SUBMIT LISTING</a>
+					</div>
+
+				</form>
 			</div>
-		</div>
-	</section>
+		</section>
 
-	<section class="list-feature">
-		<div class="container">
-
-      <ul class="breadcrumb hide-for-small">
-        <li><a href="#"><i class="fa fa-home"></i></a>  </li>
-        <li> <a href="#">District 7</a></li>
-        <li>Starhill</li>
-      </ul>
-
-			<ul class="tab-link  hide-for-small" data-module="ScrollTo">
-				<li class="active"><a href="javascript:void(0);" class="link-to" data-target="#description"> Description</a></li>
-				<li><a href="javascript:void(0);" class="link-to" data-target="#overview"> Overview</a></li>
-				<li><a href="javascript:void(0);" class="link-to" data-target="#facilities"> Facilities</a></li>
-				<li><a href="javascript:void(0);" class="link-to" data-target=".map-detail"> Location</a></li>
-				<li><a href="javascript:void(0);" class="link-to" data-target=".list-table"> Listing</a></li>
-			</ul>
-			<hr class="hide-for-small" />
-
-			<h2 class="section-title">Feature Listings in Standhills</h2>
-			<div class="row">
-				<div class="col-xs-6 col-md-3 thumb-item">
-					<div class="thumb-gallery">
-						<div class="thumb-slide" data-module="ThumbSlide">
-							<ul class="thumb-img slider-wrapper">
-								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							</ul>
-						</div>
-						<span class="tag-cate bg--yellow">Feature <i class="fa fa-star"></i></span>
-						<span class="love"><i class="fa fa-heart-o"></i></span>
-						<span class="price-tag">$600</span>
-					</div>
-					<div class="thumb-info">
-						<h4>house code 456</h4>
-						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
-						<div class="thumb-service">
-							<span><i class="fa fa-map-marker"></i> District 7</span>
-							<span><i class="fa fa-bed"></i> 1 bed </span>
-							<span><i class="fa fa-bath"></i> 1 bath</span>          
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 thumb-item">
-					<div class="thumb-gallery">
-						<div class="thumb-slide" data-module="ThumbSlide">
-							<ul class="thumb-img slider-wrapper">
-								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							</ul>
-						</div>
-						<span class="tag-cate bg--blue">new <i class="fa fa-bolt"></i></span>
-						<span class="love"><i class="fa fa-heart-o"></i></span>
-						<span class="price-tag">$600</span>
-					</div>
-					<div class="thumb-info">
-						<h4>house code 456</h4>
-						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
-						<div class="thumb-service">
-							<span><i class="fa fa-map-marker"></i> District 7</span>
-							<span><i class="fa fa-bed"></i> 1 bed </span>
-							<span><i class="fa fa-bath"></i> 1 bath</span>          
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 thumb-item">
-					<div class="thumb-gallery">
-						<div class="thumb-slide" data-module="ThumbSlide">
-							<ul class="thumb-img slider-wrapper">
-								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							</ul>
-						</div>
-						<span class="tag-cate bg--green">popular <i class="fa fa-star"></i></span>
-						<span class="love"><i class="fa fa-heart-o"></i></span>
-						<span class="price-tag">$600</span>
-					</div>
-					<div class="thumb-info">
-						<h4>house code 456</h4>
-						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
-						<div class="thumb-service">
-							<span><i class="fa fa-map-marker"></i> District 7</span>
-							<span><i class="fa fa-bed"></i> 1 bed </span>
-							<span><i class="fa fa-bath"></i> 1 bath</span>          
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 thumb-item">
-					<div class="thumb-gallery">
-						<div class="thumb-slide" data-module="ThumbSlide">
-							<ul class="thumb-img slider-wrapper">
-								<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-								<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							</ul>
-						</div>
-						<span class="tag-cate bg--red">Best dealer <i class="fa fa-gift"></i></span>
-						<span class="love"><i class="fa fa-heart-o"></i></span>
-						<span class="price-tag">$600</span>
-					</div>
-					<div class="thumb-info">
-						<h4>house code 456</h4>
-						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
-						<div class="thumb-service">
-							<span><i class="fa fa-map-marker"></i> District 7</span>
-							<span><i class="fa fa-bed"></i> 1 bed </span>
-							<span><i class="fa fa-bath"></i> 1 bath</span>          
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="project__detail">
-		<div class="container">
-
-			<h3 class="block-title" id="description">Description</h3>
-			<div class="row">
-				<div class="col-md-6">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, soluta iure, aliquid sint ab architecto sequi, facilis nobis voluptatem optio sapiente assumenda reiciendis facere quidem nostrum iusto hic sed eligendi.
-				</div>
-				<div class="col-md-6">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, soluta iure, aliquid sint ab architecto sequi, facilis nobis voluptatem optio sapiente assumenda reiciendis facere quidem nostrum iusto hic sed eligendi.
-				</div>
-			</div>
-
-			<h3 class="block-title" id="overview">Overview</h3>
-			<ul class="thumb-service thumb--4" data-module="ThumbService">
-				<li>
-					<i class="fa fa-home"></i>
-					<div class="info-fa">
-						<p>
-							<b>Apartment</b><br />
-							Project Type
-						</p>
-					</div>
-				</li>
-				<li>
-					<i class="fa fa-truck"></i>
-					<div class="info-fa">
-						<p>
-							<b>Finished</b><br />
-							Project Status
-						</p>
-					</div>
-				</li>
-				<li>
-					<i class="fa fa-building"></i>
-					<div class="info-fa">
-						<p>
-							<b>4-18 Floors</b><br />
-							Floors
-						</p>
-					</div>
-				</li>
-				<li>
-					<i class="fa fa-bed"></i>
-					<div class="info-fa">
-						<p>
-							<b>2-3</b><br />
-							Bedrooms
-						</p>
-					</div>
-				</li>
-				<li class="show-for-small"><a href="javascript:void" class="view-more">View +<span>15</span>more</a></li>
-				<li class="hide-for-small">
-					<i class="fa fa-home"></i>
-					<div class="info-fa">
-						<p>
-							<b>Apartment</b><br />
-							Project Type
-						</p>
-					</div>
-				</li>
-				<li class="hide-for-small">
-					<i class="fa fa-truck"></i>
-					<div class="info-fa">
-						<p>
-							<b>Finished</b><br />
-							Project Status
-						</p>
-					</div>
-				</li>
-				<li class="hide-for-small">
-					<i class="fa fa-building"></i>
-					<div class="info-fa">
-						<p>
-							<b>4-18 Floors</b><br />
-							Floors
-						</p>
-					</div>
-				</li>
-				<li class="hide-for-small">
-					<i class="fa fa-bed"></i>
-					<div class="info-fa">
-						<p>
-							<b>2-3</b><br />
-							Bedrooms
-						</p>
-					</div>
-				</li>
-			</ul>
-
-			<h3 class="block-title" id="facilities">FACITLITIES</h3>
-
-			<ul class="thumb-service thumb--4">
-				<li><i class="flaticon-a-public6"></i><span>Community hall</span></li>
-				<li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
-				<li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
-				<li><i class="flaticon-a-bicycle14"></i><span>Gymnasium</span></li>
-				<li class="show-for-small"><a href="javascript:void" class="view-more">View +<span>15</span>more</a></li>
-				<li class="hide-for-small"><i class="flaticon-a-tea24"></i><span>Coffee shop</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-money385"></i><span>Access card</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-shopper1"></i><span>Shooping mall</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-yoga13"></i><span>Yoga &amp; meditation</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-customerservice14"></i><span>Maintance staff</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-shopping-cart8"></i><span>supper market</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-swimming21"></i><span>Swimming Pool</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-policeman1"></i><span>Security Guards</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-pool8"></i><span>Indoor game</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-medical12"></i><span>Phamacy</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-man244"></i><span>Banking /ATM</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-racket1"></i><span>tennis court</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-covered16"></i><span>Restaurant</span></li>            
-				<li class="hide-for-small"><i class="flaticon-a-network11"></i><span>Club house</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-plug38"></i><span>24h Electricity Backup</span></li>
-				<li class="hide-for-small"><i class="flaticon-a-parking19"></i><span>Parking</span></li>
-			</ul>
-
-		</div>
-	</section>
-
-	<section class="list-table">
-		<div class="container">
-			<h2 class="section-title">Other Listing in Starhills</h2>
-
-			<table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
-				<thead>
-					<tr>
-						<th data-field="code" data-sortable="true">House code</th>
-						<th data-field="numBed" data-sortable="true">Bedroom</th>
-						<th data-field="numBath" data-sortable="true">Bathroom</th>
-						<th data-field="area" data-sortable="true">Area</th>
-						<th data-field="floor" data-sortable="true">Floor</th>
-						<th data-field="furnished" data-sortable="true">Furnished</th>
-						<th data-field="view" data-sortable="true">View</th>
-						<th data-field="price" data-sortable="true">Price</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>AH02163</td>
-						<td>1 bed</td>
-						<td>1 bath</td>
-						<td>80sqm</td>
-						<td>6th</td>
-						<td>furnished</td>
-						<td>River</td>
-						<td>$1000</td>
-						<td><a href="#">View</a></td>
-					</tr>
-					<tr>
-						<td>BH02165</td>
-						<td>1 bed</td>
-						<td>1 bath</td>
-						<td>80sqm</td>
-						<td>6th</td>
-						<td>empty</td>
-						<td>River</td>
-						<td>$2000</td>
-						<td><a href="#">View</a></td>
-					</tr>
-					<tr>
-						<td>H02165</td>
-						<td>1 bed</td>
-						<td>1 bath</td>
-						<td>70sqm</td>
-						<td>6th</td>
-						<td>empty</td>
-						<td>River</td>
-						<td>$3000</td>
-						<td><a href="#">View</a></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</section>
-
-	<section class="map-detail" data-module="MapDetail" data-lat ="10.785" data-lng ="106.701">
-		<div class="map-info">
-			<h3>Resort like Stone-Hill</h3>
-			<p><i class="fa fa-map-marker"></i> <span>District 7</span></p>
-		</div>
-		<div class="map-content" id="map">
-		</div>
-	</section>
-
-	<section class="project slide-project" data-module="SlideProject">
-		<div class="container">
-
-			<h2 class="section-title">Similar Projects</h2>
-			<div class="slider-wrapper">
-				<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
-				</div>
-				<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
-				</div>
-				<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
-				</div>
-				<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
-				</div>
-			</div>
-
-			<div class="btn-wrapper">
-				<a href="#" class="btn btn--blue">View all</a>
-			</div>
-		</div>
-	</section>
-</main>
+	</main>
 
 {% endblock %}
